[NOD-751] repository's first commit
