# src/main/java/it/gov/pagopa/iuvgenerator/controller/model/generator/IUVGenerationRequest.java
@@ -1,0 +1,19 @@
+package it.gov.pagopa.iuvgenerator.controller.model.generator;
+
+import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.constraints.NotNull;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+public class IUVGenerationRequest {
+
+    @NotNull
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED, description = "..", example = "3")
+    private Integer auxDigit;
+
+    @NotNull
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED, description = "..", example = "48")
+    private Integer segregationCode;
+}
